--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,25 +1,10 @@
 http{
   interface="127.0.0.1"
   port=8080
-  password=${HTTP_PASSWORD}
+  password="password"
 }
 
 cors.allowed-origin="*"
-
-//database = {
-//  driver = "com.typesafe.slick.driver.oracle.OracleDriver$"
-//  db {
-//    host = ${?DB_HOST}
-//    port = ${?DB_PORT}
-//    sid = ${?DB_SID}
-//
-//    url = "jdbc:oracle:thin:@//"${oracle.db.host}":"${oracle.db.port}"/"${oracle.db.sid}
-//    user = ${?DB_USERNAME}
-//    password = ${?DB_PASSWORD}
-//    connectionTimeout=5000
-//    queueSize = 100000
-//  }
-//}
 
 database = {
   url = "jdbc:h2:mem:test1"
@@ -29,11 +14,11 @@ database = {
 }
 
 google = {
-  domain = ${?GOOGLE_DOMAIN}
-  serviceAccountEmail = ${?GOOGLE_SERVICE_ACCOUNT}
-  administratorEmail = ${GOOGLE_ADMINISTRATOR_ACCOUNT}
-  credentialFilePath = ${?GOOGLE_CREDENTIAL_FILE_LOCATION}
-  applicationName = ${?GOOGLE_APPLICATION_NAME}
+  domain = ""
+  serviceAccountEmail = ""
+  administratorEmail = ""
+  credentialFilePath = ""
+  applicationName = ""
 }
 
 akka.http {
@@ -60,6 +45,4 @@ akka.http {
     tcp-oob-inline = undefined
     tcp-no-delay = undefined
   }
-
-
 }
