--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -7,10 +7,13 @@ http{
 cors.allowed-origin="*"
 
 database = {
-  url = "jdbc:h2:mem:test1"
-  driver = org.h2.Driver
-  connectionPool = disabled
-  keepAliveConnection = true
+  driver = "slick.driver.H2Driver$"
+  db {
+    url = "jdbc:h2:mem:test1"
+    driver = org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
 }
 
 google = {
