Added Https Configuration
Keystores Are Loaded Lazily By The Main Application And Throw Errors On Configs, does not affect testing. Will need a signed-cert for a production application.  If we containerize we will need a way to import, or reverse proxy.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,12 @@
 http{
   interface="127.0.0.1"
-  port=8080
-  password=${HTTP_PASSWORD}
+  port=8443
+  password=${?HTTP_PASSWORD}
+  ssl{
+    type="JKS"
+    path=${?KEYSTORE_PATH}
+    password=${?KEYSTORE_PASSWORD}
+  }
 }
 
 cors.allowed-origin="*"
@@ -36,30 +41,30 @@ google = {
   applicationName = ${?GOOGLE_APPLICATION_NAME}
 }
 
-akka.http {
-  server-header = akka-http/${akka.version}
-  idle-timeout = 60 s
-  request-timeout = 20 s
-  bind-timeout = 1s
-  max-connections = 1024
-  pipelining-limit = 16
-  remote-address-header = off
-  raw-request-uri-header = off
-  transparent-head-requests = on
-  verbose-error-messages = off
-  response-header-size-hint = 512
-  backlog = 100
-  default-host-header = ""
+akka {
+  http {
+    server-header = akka-http/${akka.version}
+    idle-timeout = 60 s
+    request-timeout = 20 s
+    bind-timeout = 1s
+    max-connections = 1024
+    pipelining-limit = 16
+    remote-address-header = off
+    raw-request-uri-header = off
+    transparent-head-requests = on
+    verbose-error-messages = off
+    response-header-size-hint = 512
+    backlog = 100
+    default-host-header = ""
 
-  socket-options {
-    so-receive-buffer-size = undefined
-    so-send-buffer-size = undefined
-    so-reuse-address = undefined
-    so-traffic-class = undefined
-    tcp-keep-alive = undefined
-    tcp-oob-inline = undefined
-    tcp-no-delay = undefined
+    socket-options {
+      so-receive-buffer-size = undefined
+      so-send-buffer-size = undefined
+      so-reuse-address = undefined
+      so-traffic-class = undefined
+      tcp-keep-alive = undefined
+      tcp-oob-inline = undefined
+      tcp-no-delay = undefined
+    }
   }
-
-
 }
